cmake_minimum_required(VERSION 3.16.6)
project(basic_algorithms LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_helper.cmake)

enable_testing()
set(dependencies dp fft sort tree binary_search string_search graph moderncpp)
LIST(APPEND dependencies 2021F stack array list effective_cpp)
LIST(APPEND dependencies string trie math disjoint_set divide_merge)
LIST(APPEND dependencies matrix cache)
foreach (elementName IN LISTS dependencies)
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${elementName})
endforeach ()
unset(dependencies)
