cmake_minimum_required(VERSION 3.16.6)
project(${PROJECT_NAME}_list LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

enable_testing()
set(dependencies 2 19 21 23 24)
LIST(APPEND dependencies 25 61 82 83 86)
LIST(APPEND dependencies 92 109)
foreach (elementOrder IN LISTS dependencies)
    set(elementName leetcode_${elementOrder})
    add_executable(${PROJECT_NAME}_${elementName} ${CMAKE_CURRENT_SOURCE_DIR}/${elementName}.cpp)
    target_compile_definitions(${PROJECT_NAME}_${elementName} PRIVATE CS203_DSAA_TEST_MACRO)
    target_link_libraries(${PROJECT_NAME}_${elementName} CS203_DSAA_template_INCLUDE CS203_DSAA_template_INCLUDE_LIST)
    target_precompile_headers(${PROJECT_NAME}_${elementName} REUSE_FROM
                              CS203_DSAA_template_INCLUDE_PCH17
                              )
    MESSAGE(STATUS "${PROJECT_NAME}_${elementName} from ${CMAKE_CURRENT_SOURCE_DIR}/${elementName}.cpp")
    add_test(${PROJECT_NAME}_${elementName}_CTEST ${PROJECT_NAME}_${elementName})
    unset(elementName)
endforeach ()
unset(dependencies)

set(dependencies 109)
foreach (elementOrder IN LISTS dependencies)
    set(elementName leetcode_${elementOrder})
    target_link_libraries(${PROJECT_NAME}_${elementName} CS203_DSAA_template_INCLUDE_TREE)
    unset(elementName)
endforeach ()
unset(dependencies)
