cmake_minimum_required(VERSION 3.16.6)
project(${PROJECT_NAME}_sort LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")


enable_testing()
set(dependencies insert bubble selection merge heap quick)
foreach (elementName IN LISTS dependencies)
    add_library(${PROJECT_NAME}_${elementName} ${LIB_WAY} ${CMAKE_CURRENT_SOURCE_DIR}/${elementName}_sort.cpp)
    add_executable(${PROJECT_NAME}_${elementName}_test ${CMAKE_CURRENT_SOURCE_DIR}/sort_test.cpp)
    target_link_libraries(${PROJECT_NAME}_${elementName}_test CS203_DSAA_template_INCLUDE ${PROJECT_NAME}_${elementName})
    target_precompile_headers(${PROJECT_NAME}_${elementName}_test REUSE_FROM
                              CS203_DSAA_template_INCLUDE_PCH11
                              )
    MESSAGE(STATUS "${PROJECT_NAME}_${elementName} from ${CMAKE_CURRENT_SOURCE_DIR}/${elementName}_sort.cpp")
    add_test(${PROJECT_NAME}_${elementName}_CTEST ${PROJECT_NAME}_${elementName}_test)
endforeach ()
unset(dependencies)